# sistema-gestao-biblioteca

./: .gitignore  CMakeLists.txt  README.md  programa  sistema_biblioteca
include/: emprestimo.h  livro.h  menu.h  relatorios.h  usuario.h
src/: .usuario.c.swp  emprestimo.c  livro.c  main.c  menu.c  relatorios.c  usuario.c  usuario.c.save
